--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,80 +4,101 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DADAEC"
     android:orientation="vertical"
     app:layoutDescription="@xml/activity_main_scene"
-    android:padding="20dp"
-    android:background="#D0D0D3"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textField1"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:endIconMode="clear_text"
-        android:outlineProvider="background"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-    android:hint="Kullanici Adi">
+        android:layout_height="?actionBarSize"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etkullaniciadi"
-            android:layout_width="match_parent"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:layout_weight="1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/textColor"
+            android:text="Kullanıcı Listesi"/>
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:endIconMode="password_toggle"
-
-        android:hint="Şifre">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etsifre"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/buttonID"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            />
+            android:src="@drawable/ic_refresh" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
-    </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textField2"
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:endIconMode="clear_text"
-        android:hint="Email">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etemail"
+        <ListView
+            android:id="@+id/listview1"
             android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/baseline_add_box_24"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-            />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/person_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toTopOf="@+id/add"
+            app:layout_constraintEnd_toEndOf="@+id/add"
+            app:layout_constraintStart_toStartOf="@+id/add"
+            app:srcCompat="@drawable/format_list" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/personListText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="Kişileri Listele"
+            app:layout_constraintBottom_toBottomOf="@+id/person_list"
+            app:layout_constraintEnd_toStartOf="@+id/person_list"
+            app:layout_constraintTop_toTopOf="@+id/person_list" />
 
 
-    <Button
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_person"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toTopOf="@+id/person_list"
+            app:layout_constraintEnd_toEndOf="@+id/person_list"
+            app:layout_constraintStart_toStartOf="@+id/person_list"
+            app:srcCompat="@drawable/person_add" />
 
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Kayıt Ol" />
-
-    <Button
-        android:id="@+id/buttonID"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Listele" />
-
-    <ListView
-        android:id="@+id/listview1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/addPersonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="Kişi Ekle"
+            app:layout_constraintBottom_toBottomOf="@+id/add_person"
+            app:layout_constraintEnd_toStartOf="@+id/add_person"
+            app:layout_constraintTop_toTopOf="@+id/add_person" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
