--- a/app/src/main/res/layout/listviewdesign.xml
+++ b/app/src/main/res/layout/listviewdesign.xml
@@ -1,41 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:padding="10dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingStart="16dp"
+    android:paddingTop="8dp"
+    android:paddingEnd="16dp"
+    android:paddingBottom="8dp">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tvKullanici"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/layoutstyle"
-        android:padding="10dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/textColor"
+        android:text="Asdasdasd"/>
 
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/tvSifre"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/textColorLight"
+        android:text="Asdasdasd"/>
 
-
-        <TextView
-            android:id="@+id/tvKullanici"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="20dp"
-
-            android:layout_margin="5dp"
-            android:textColor="@color/black"/>
-        <TextView
-            android:id="@+id/tvSifre"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:textColor="#8C8C8C"/>
-        <TextView
-            android:id="@+id/tvEmail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:textColor="#8C8C8C"/>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tvEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/textColorLight"
+        android:text="Asdasdasd"/>
 </LinearLayout>
