--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Kişi Güncelleme"
+            android:text="@string/sirketGuncelleme"
 
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/textColor" />
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:hint="Kullanıcı Adı"
+        android:hint="@string/sirketAdi"
         android:outlineProvider="background"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
 
-        android:hint="Şifre"
+        android:hint="@string/sirketSifre"
         app:endIconMode="password_toggle"
         app:layout_constraintBottom_toTopOf="@+id/textField2"
         app:layout_constraintEnd_toEndOf="@+id/textField1"
@@ -84,7 +84,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:hint="E-mail"
+        android:hint="@string/sirketMail"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="@+id/textField"
         app:layout_constraintHorizontal_bias="0.0"
@@ -106,7 +106,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Kişiyi Güncelle"
+        android:text="@string/btnGuncelleme"
         app:icon="@drawable/baseline_update_24"
         android:padding="15dp"
         android:layout_marginLeft="20dp"
@@ -147,7 +147,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="Kişileri Listele"
+        android:text="@string/floatListe"
         app:layout_constraintBottom_toBottomOf="@+id/person_list"
         app:layout_constraintEnd_toStartOf="@+id/person_list"
         app:layout_constraintTop_toTopOf="@+id/person_list" />
@@ -169,7 +169,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="Kişi Ekle"
+        android:text="@string/floatEkle"
         app:layout_constraintBottom_toBottomOf="@+id/add_person"
         app:layout_constraintEnd_toStartOf="@+id/add_person"
         app:layout_constraintTop_toTopOf="@+id/add_person" />
